syntax = "proto3";

option csharp_namespace = "Payments.Grpc";

service Payments {
  rpc CreatePaymentForBooking (CreatePaymentForBookingRequest) returns (CreatePaymentForBookingResponse);
  rpc CancelPayment (CancelPaymentRequest) returns (CancelPaymentResponse); 
}

message CreatePaymentForBookingRequest {
  string bookingId = 1;
  double amount = 2;
  int32 currency = 3;
  string description = 4;
}

message CreatePaymentForBookingResponse {
  string paymentId = 1;
}

message CancelPaymentRequest {
  string paymentId = 1;
}

message CancelPaymentResponse {
  bool canceled = 1;
}

